# WindowsRecognition

./: .gitignore  .gitmodules  CLAUDE.md  README.md  main.py  pyproject.toml
config/: config.yaml  config_bk.yaml  config_cascadepsp.yaml  config_crm.yaml  config_large.yaml  config_none.yaml  config_prod.yaml  config_sam.yaml  config_sam3.yaml  config_samrefiner.yaml  config_segrefiner.yaml
scripts/: crawl_interiors.sh  infer_cascadepsp.sh  infer_sam.sh  infer_sam3.sh  install_crm.sh  install_sam.sh  install_sam3.sh  move_matching_masks.sh  run_copy_image_mask_pairs.sh  train.sh
scripts/data/: run_copy_image_mask_pairs.sh
scripts/infer/: infer.sh  infer_crm.sh  infer_none.sh  infer_samrefiner.sh  infer_segrefiner.sh
scripts/install/: install_sam.sh  install_sam2hq.sh  install_samrefiner.sh  install_segrefiner.sh
src/: crawl_interiors.py  data_loader.py  evaluate.py  inference.py  inference_sam.py  inference_sam3.py  loss.py  model.py  postprocessing.py  server.py  test_sam.py  train.py  utils.py
src/archived/: inference.py  test_sam.py
src/inference/: cascade_processor.py  contour_processor.py  crm_processor.py  instance_processor.py  point_generator.py  post_processor.py  samrefiner_processor.py  segrefiner_compat.py  segrefiner_processor.py  tiling_processor.py
src/utils/: copy_image_mask_pairs.py  utils.py
tests/: test_cascade_processor.py  test_crm_processor.py
utils/: copy_image_mask_pairs.py  drop_duplicates.py  move_files_by_prefix.py  move_matching_masks.py
