[project]
name = "windowsrecognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.5",
    "dotenv>=0.9.9",
    "huggingface-hub>=0.30.2",
    "kornia>=0.8.0",
    "lightning>=2.5.1",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "segmentation-models-pytorch>=0.4.0",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "ultralytics>=8.3.116",
    "wandb>=0.19.9",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121" },
]
torchvision = [
    { index = "pytorch-cu121" },
]


[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
