[project]
name = "windowsrecognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.5",
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "huggingface-hub>=0.30.2",
    "kornia>=0.8.0",
    "lightning>=2.5.1",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "segmentation-models-pytorch>=0.4.0",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "ultralytics>=8.3.116",
    "pillow>=10.0.0",
    "requests>=2.32.0",
    "wandb>=0.19.9",
    "sam-2",
    "sam3",
    "einops",
    "pycocotools",
    "cc-torch",
    "segmentation-refinement",
    "progressbar2",
]

[tool.uv]
no-build-isolation-package = ["cc-torch"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" },
]
torchvision = [
    { index = "pytorch-cu126" },
]
sam-2 = { path = "sam2", editable = true }
sam3 = { path = "sam3", editable = true }
cc-torch = { git = "https://github.com/ronghanghu/cc_torch.git" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
]
